k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: connectwell-web
  labels:
    app: connectwell
spec:
  selector:
    app: connectwell
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
